# ceviche-rs

./: Cargo.toml
cmdlet/: Cargo.toml
examples/foobar/: Cargo.toml
src/: lib.rs
src/controller/: windows.rs
